Width fix for the before and after diagrams on small screens.

--- a/docs/.vuepress/theme/styles/custom/pages/_page-home.scss
+++ b/docs/.vuepress/theme/styles/custom/pages/_page-home.scss
@@ -330,6 +330,7 @@ $home-feature-icon-bottom-spacing: 1rem;
     img {
       display: block;
       margin: 0 auto;
+      width: 100%;
     }
   }
 
